<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#255459"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/TermsHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_condition"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="26sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        />

    <RadioGroup
        android:id="@+id/TermsRadioGroup"
        android:layout_width="414dp"
        android:layout_height="485dp"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TermsHeaderTextView">

        <CheckBox
            android:id="@+id/oneCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_creating_a_friendzone_account_or_using_the_app_via_a_mobile_device_mobile_application_or_computer_you_agree_that_you_are_bound_by_these_terms_of_use_we_may_from_time_to_time_make_changes_to_this_agreement_and_the_service_we_can_do_this_for_a_variety_of_reasons_reflecting_changes_in_or_legal_requirements_new_features_or_changes_in_business_practices"
            android:textColor="@color/black"/>


        <CheckBox
            android:id="@+id/twoCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_must_be_at_least_18_years_old_to_create_an_account_on_friendzone_and_use_the_service"
             android:textColor="@color/black"/>


        <CheckBox
            android:id="@+id/threeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_can_terminate_your_account_at_any_time_for_any_reason"
            />


        <CheckBox
            android:id="@+id/fourCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friendzone_always_strives_to_improve_the_service_and_give_you_more_features_that_are_interesting_and_useful_to_you_this_means_that_from_time_to_time_we_may_add_new_product_features_or_make_improvements_and_even_remove_certain_features_and_if_these_actions_do_not_significantly_affect_your_rights_or_obligations_we_may_not_notify_you_before_implementing_them"
             />


    </RadioGroup>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color5"
        android:text="@string/cancel"
        android:checked="false"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TermsRadioGroup"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/AgreeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color5"
        android:checked="false"
        android:text="@string/agree"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TermsRadioGroup"
        tools:ignore="TextContrastCheck" />








    </androidx.constraintlayout.widget.ConstraintLayout>



